--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,11 @@
+{% include layout.html include="head.html" %}
+{% if default_include %}
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- include seo-info.html -%}
-  <title>ML@CL{% if page.title %} {{page.title}}{% endif %}</title>
-  <link rel="stylesheet" type="text/css" href="{{ '/assets/css/style.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
   {% include netlify/cms-widget.html %}
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
@@ -13,4 +14,7 @@
   {%-include hidden_copy_code.html-%}
   {%- include google/analytics-code.html -%}  
   {% include mathjax_code.html %}
+  {%- include custom-head.html -%}
+  
 </head>
+{% endif %}
