--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,8 +8,8 @@
       {{ content }}
     </main>
     {% include footer.html %}
-    <script type="text/javascript" src="{{site.baseurl}}/assets/js/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="{{site.baseurl}}/assets/js/main.js"></script>
+    <script type="text/javascript" src='{{ "/assets/js/jquery-3.6.0.min.js" | relative_url }}'></script>
+    <script type="text/javascript" src='{{ "/assets/js/main.js" | relative_url }}'></script>
   </body>
 </html>
 
