--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,85 @@
-{% include layout.html include="footer.html" %}
-{% if default_include %}
-<footer class="site-footer">
-<div class="wrapper">
-This site last compiled {{ site.time | date_to_rfc822 }}
-</div>
-  <!-- Basic conference information -->
-  <div class="footer-left">
+<div id='footer'>
+  <div class='three spacing'></div>
+  <div class='row'>
+    <div class='large-3 medium-3 columns'>
+      <h1>
+        <a href='index.html'>
+          <img alt="" src="{{site.url}}/{{site.baseurl}}/{{site.data.images.directory}}/logo-landscape-white-out.png" />
+        </a>
+      </h1>
+      <p>©2021 {{site.title}}. All rights reserved.</p>
+      <div class='spacing'></div>
+      <div class='spacing'></div>
+    </div>
+    <div class='large-3 medium-3 columns'>
+      <div class='spacing'></div>
+      <div class='links'>
+        <h4>Our work</h4>
+        <ul>
+	  {% for item in site.data.nav.footer_nav %}
+          <li>
+            <a href="{{ item.link }}">{{ item.label }}</a>
+            {% if item.submenu_item != nil %}
+            <div class="submenu">
+              {% for item in item.submenu_item. %}
+              <a href="{{ item.link }}">{{ item.label }}</a>
+              {% endfor %}
+            </div>
+            {% endif %}
+          </li>
+	  {% endfor %}
+        </ul>
+      </div>
+      <div class='spacing'></div>
+    </div>
+    <div class='large-3 medium-3 columns'>
+      <div class='spacing'></div>
+      <div class='links'>
+        <h4>Recent posts</h4>
+        <ul>
+          {% for post in site.posts %}
+            <li><a href="{{post.url}}">{{post.title}}</a></li>
+          {% endfor %}
+        </ul>
+      </div>
+      <div class='spacing'></div>
+    </div>
+    <div class='large-3 medium-3 columns'>
+      <div class='spacing'></div>
+      <h4>Contact us</h4>
+      <ul>
+        <li><a href="mailto:{{ site.data.site.contact_details.email }}">
+                            {{ site.data.site.contact_details.email }}
+                        </a></li>
+        <li>{{ site.data.site.contact_details.address | markdownify }}</li>
+      </ul>
+      <div class='spacing'></div>
+      <ul class='socials'>
+        <!--<li>
+          <a href='http://facebook.com'>
+            <i class='fa fa-facebook'></i>
+          </a>
+        </li>-->
+        <li>
+          <a href='{{ site.data.site.social_details.twitter_link }}'>
+            <i class='fa fa-twitter'></i>
+          </a>
+        </li>
+        <li>
+          <a href='{{ site.data.site.social_details.youtube_link }}'>
+            <i class='fa fa-youtube'></i>
+          </a>
+        </li>
+      </ul>
+      <div class='spacing'></div>
+    </div>
   </div>
-
-  <!-- Social media and contact information -->
-  <div class="footer-right">
-
-    {% if site.contact_email %}
-    <a href="mailto:{{ site.contact_email }}"><i class="icon-envelope"></i>&nbsp;Contact Mail</a><br/>
-    {% endif %}
-
-    {% if site.github_username %}
-    <a href="https://github.com/{{ site.github_username }}"><i class="icon-github"></i>&nbsp;{{ site.github_username }}</a><br/>
-    {% endif %}
-
-    {% if site.twitter_username %}
-    <a href="https://twitter.com/{{ site.twitter_username }}"><i class="icon-twitter"></i>&nbsp;{{ site.twitter_username }}</a>
-    {% endif %}
-
-  </div>
-
+  <div class='two spacing'></div>
 </div>
-</footer>
-{% endif %}
+
+<script src="{{ "/assets/js/jquery.countTo.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/jquery.appear.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/jquery.validate.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/jquery.sequence-min.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/jquery.easing.1.3.js" | relative_url }}" type="text/javascript"></script>
+<script src="{{ "/assets/js/app.js" | relative_url }}" type="text/javascript"></script>
